--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
+
+    <!--------Navigation Bar--------->
     <nav class="navbar">
         <div class="navbar-logo">AccountsNtax</div>
-
         <div class="navbar-items">
             <a href="#" class="navbar-item">Home</a>
-            <a href="#" class="navbar-item">About</a>
+            <a href="./pages/about.html" class="navbar-item">About</a>
             <a href="#" class="navbar-item">Pricing</a>
             <a href="#" class="navbar-item">Support</a>
         </div>
@@ -25,17 +26,59 @@
         </div>
     </nav>
 
+    <!--------Home Page Container--------->
     <div class="home-container">
-        <h1>Accounting Made Simple</h1>
-        <p>AccountNtax is a straightforward and user-friendly accounting platform that<br>
-            simplifies the accounting process for small to medium-sized businesses</p>
+        <h1>Your E-Accountant</h1>
+        <p>Empower your business with accounts-N-tax, an automated trusted accounting solution<br>
+            Are you tired of the tedious and time-consuming tasks involved in traditional accounting? Look no
+            further!<br>
+            We are your reliable e-accountant, providing cutting-edge technology to automate your accounting </p>
         <p class="set-account"> Setting up your AccountNtax takes less than 10 min</p>
+        <button class="demo-button">Book a Demo</button>
     </div>
 
-    <div class="img-container"></div>
+
+    <!-------Image Container Advert------->
+    <div class="img-container"><img class="img1" src="../images/p1.png" alt="p1.png"><img class="mob"
+            src="../images/mobile.jpg"></div>
+
+
+    <!--------Trusted Container--------->
     <div class="trusted-container">
         <h1>Trusted By the Best</h1>
+        <div class="trusted-grid-container">
+            <div class="boxi">
+                <h3 class="box-trusted">Simplify Book Keeping</h3>
+                <p class="box-trusted-number">Our e-accountant is more than just software – it's a virtual expert that
+                    works
+                    tirelessly to simplify your accounting tasks.
+                </p>
+            </div>
+            <div class="boxi">
+                <h3 class="box-trusted">Automates the Accounting Process</h3>
+                <p class="box-trusted-number">Say goodbye to manual data entry, complex spreadsheets and save your time,
+                    effort
+                    and resources over repetitive tasks
+                </p>
+            </div>
+            <div class="boxi">
+                <h3 class="box-trusted">Reliable Insights</h3>
+                <p class="box-trusted-number">State-of-the-art e-accountant solution to streamline your accounting
+                    processes and
+                    empower you with real-time insights.
+                </p>
+            </div>
+            <div class="boxi">
+                <h3 class="box-trusted">Ensure Compliance</h3>
+                <p class="box-trusted-number"> Cutting-Edge Technology to revolutionize your financial management
+                    & tax compliance.
+                </p>
+            </div>
+        </div>
     </div>
+
+
+    <!--------Why Us Container--------->
     <div class="whyus-container">
         <h1>Why accountsNtax?</h1>
         <p>Trusted and backed by the world s top entrepreneurs, creators, and amazing folks.</p>
@@ -55,6 +98,7 @@
         </div>
     </div>
 
+    <!---------Finance Container-------->
     <div class="finance-container">
         <h1>Get a better grip on your business finances.</h1>
         <div class="finance-container-grid">
@@ -83,72 +127,84 @@
         </div>
     </div>
 
+    <!----------Services Offered Container--------->
     <div class="service-container">
         <h1>Our Elite Services for your Business</h1>
-        <p>Reimagine more meaningful conversations and turn service agents into customer<br>
-            champions. Launch customer and employee delight in under 3 months!</p>
-
-
+        <p>accounts-N-tax offer you a comprehensive suite of features to let you grow your business.</p>
         <div class="service-grid-container">
-
             <div class="left-div">
                 <h1>CUSTOMER DELIGHT MADE EASY</h1>
-                <h2>Lorem ipsum dolor sit amet</h2>
+                <h2>PROFESSIONAL INVOICING</h2>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                    <li>- User friendly interface to generate & share sleek invoices.</li>
+                    <li>- Automated calculations with just a few clicks.</li>
+                    <li>- Share invoices via WhatsApp, e-mail on a go.</li>
+                    <li>- Track payment status & set automated reminders.</li>
                 </ul>
                 <a href="#" class="explore-now">Explore Now</a>
             </div>
             <div class="right-div">
-                <img src="path_to_your_image.jpg" alt="Image">
+                <img class="img2" src="../images/p2.png" alt="Image">
             </div>
 
             <div class="left-div">
-                <img src="path_to_your_image.jpg" alt="Image">
+                <img class="img3" src="../images/p3.png" alt="Image">
             </div>
             <div class="right-div-1">
                 <h1>CUSTOMER DELIGHT MADE EASY</h1>
-                <h2>Lorem ipsum dolor sit amet</h2>
+                <h2>POWERFUL REPORTING</h2>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                    <li>- Generate comprehensive reports and financial statements..</li>
+                    <li>- Analyze trends, patterns and gain valuable insights into business performance.</li>
+                    <li>- Make informed & in-time decisions for growth & profitability.</li>
+                    <li>- Share reports instantly with your team, consultants and customerst.</li>
                 </ul>
                 <a href="#" class="explore-now">Explore Now</a>
             </div>
-
             <div class="left-div">
                 <h1>CUSTOMER DELIGHT MADE EASY</h1>
-                <h2>Lorem ipsum dolor sit amet</h2>
+                <h2>BANK RECONCILIATION</h2>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                    <li>- Upload your bank statement(s) for automated recording.</li>
+                    <li>- Define categorization rules for repetitive transactions.</li>
+                    <li>- Recorded transactions are matched with entries in bank statements.</li>
+                    <li>- Get Reconciled bank account with Zero Suspense transactions.</li>
                 </ul>
                 <a href="#" class="explore-now">Explore Now</a>
             </div>
             <div class="right-div">
-                <img src="path_to_your_image.jpg" alt="Image">
+                <img class="img4" src="../images/p4.png" alt="Image">
             </div>
 
             <div class="left-div">
-                <img src="path_to_your_image.jpg" alt="Image">
+                <img class="img5" src="../images/p5.png" alt="Image">
             </div>
             <div class="right-div-1">
                 <h1>CUSTOMER DELIGHT MADE EASY</h1>
-                <h2>Lorem ipsum dolor sit amet</h2>
+                <h2>DOCUMENT VAULT</h2>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                    <li>- Bring all your scattered financial documents & data into one centralized location on cloud .
+                    </li>
+                    <li>- Easy organization and quick access anytime.</li>
+                    <li>- Digitally lock your credentials and documents.</li>
+                    <li>- Seamless integration with web browsers and applications for login at different portals of
+                        regular use in business .</li>
                 </ul>
                 <a href="#" class="explore-now">Explore Now</a>
+            </div>
+            <div class="left-div">
+                <h1>CUSTOMER DELIGHT MADE EASY</h1>
+                <h2>MULTIPLE COMPANIES</h2>
+                <ul>
+                    <li>- Add unlimited companies being individual, partnership etc.</li>
+                    <li>- View each company’s data separately.</li>
+                    <li>- Add users for each company with access right setup .</li>
+                    <li>- Apprise yourself with financial status of each company.</li>
+                </ul>
+                <a href="#" class="explore-now">Explore Now</a>
+            </div>
+            <div class="right-div">
+                <img class="img6" src="../images/p6.png" alt="Image">
             </div>
         </div>
     </div>
